Updated docs to 13e1720

--- a/lab_01.html
+++ b/lab_01.html
@@ -39,6 +39,7 @@
               <li id="lab_1_link"><a href="lab_01.html">Client-Server Model</a></li>
   <li id="lab_2_link"><a href="lab_02.html">API</a></li>
   <li id="lab_3_link"><a href="lab_03.html">Homework Assignment 04</a></li>
+  <li id="lab_4_link"><a href="lab_04.html">REST</a></li>
 
           </ol>
         </nav>
