--- a/lab_03.html
+++ b/lab_03.html
@@ -39,6 +39,7 @@
               <li id="lab_1_link"><a href="lab_01.html">Client-Server Model</a></li>
   <li id="lab_2_link"><a href="lab_02.html">API</a></li>
   <li id="lab_3_link"><a href="lab_03.html">Homework Assignment 04</a></li>
+  <li id="lab_4_link"><a href="lab_04.html">REST</a></li>
 
           </ol>
         </nav>
@@ -49,11 +50,11 @@
 <h2>Option 1: Create your Hacker News Sentiment Analyzer</h2>
 <p>1. Within server.py call the hacker news api, fetch the latest comments, and run sentiment analysis on it.</p>
 <h2>Option 2: Create your Twitter Sentiment Analyzer</h2>
-<p>1. Create a twitter account and use twitter&#8217;s search <span class="caps">API</span> to fetch the latest tweets based on an input and run sentiment analysis on it. You will need to learn about <span class="caps">HTML</span> inputs, <span class="caps">POST</span> requests, redirects, flask templates, and also fetch your bearer token to access Twitter&#8217;s <span class="caps">API</span>.</p>
+<p>1. Create a twitter account and use twitter&#8217;s search <span class="caps">API</span> to fetch the latest tweets based on an input and run sentiment analysis on it. You will need to learn about <span class="caps">HTML</span> inputs, <span class="caps">GET</span>/<span class="caps">POST</span> requests, redirects, flask templates, and also fetch your bearer token to access Twitter&#8217;s <span class="caps">API</span>.</p>
 <p><a href="https://stackoverflow.com/questions/12277933/send-data-from-a-textbox-into-flask">Inputs and Flask</a><br />
 <a href="http://flask.pocoo.org/docs/1.0/tutorial/templates/">Flask templates</a><br />
 <a href="https://developer.twitter.com/en/docs/basics/authentication/guides/bearer-tokens.html">Generating a bearer token</a><br />
-<a href="https://stackoverflow.com/questions/49861167/how-to-get-html-input-using-python-flask">Redirecting after a post request on a for:m</a></p>
+<a href="https://stackoverflow.com/questions/49861167/how-to-get-html-input-using-python-flask">Redirecting after a get/post request on a for:m</a></p>
 <p><span class="caps">TLDR</span>: To make a request via twitter&#8217;s <span class="caps">API</span>:</p>
 <h3 class="file-heading"><em>request_twitter_data</em></h3>
 <pre class="file">def get_tweets(searchitem)
@@ -72,8 +73,10 @@
       Previous
     </a>
   
-  
-    <span></span
+      <a href="lab_04.html">
+      <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
+      Next
+    </a>
   </nav>
 
       </div>
