--- a/lab_03.html
+++ b/lab_03.html
@@ -40,6 +40,7 @@
   <li id="lab_2_link"><a href="lab_02.html">API</a></li>
   <li id="lab_3_link"><a href="lab_03.html">Homework Assignment 04</a></li>
   <li id="lab_4_link"><a href="lab_04.html">REST</a></li>
+  <li id="lab_5_link"><a href="lab_05.html">SQL</a></li>
 
           </ol>
         </nav>
