--- a/lab_04.html
+++ b/lab_04.html
@@ -40,6 +40,7 @@
   <li id="lab_2_link"><a href="lab_02.html">API</a></li>
   <li id="lab_3_link"><a href="lab_03.html">Homework Assignment 04</a></li>
   <li id="lab_4_link"><a href="lab_04.html">REST</a></li>
+  <li id="lab_5_link"><a href="lab_05.html">SQL</a></li>
 
           </ol>
         </nav>
@@ -83,8 +84,10 @@ can then use to service the request. (Ex. Giving the server the login details)</
       Previous
     </a>
   
-  
-    <span></span
+      <a href="lab_05.html">
+      <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
+      Next
+    </a>
   </nav>
 
       </div>
